update datepicker